# ShadowCore

./: README
2.4.3/src/shadowcore/: CMakeLists.txt  CliRunnable.cpp  OCSoap.cpp  OCSoap.h  Thumbs.db  WorldRunnable.h
2.4.3/src/shadowrealm/: CMakeLists.txt  Main.cpp  Thumbs.db
3.3.5/src/server/authserver/: Main.cpp
3.3.5/src/server/worldserver/: Master.cpp
3.3.5/src/server/worldserver/CommandLine/: CliRunnable.cpp
sql/: create_mysql.sql.orig
src/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/game/: ScriptMgr.cpp
src/shadowcore/: CliRunnable.cpp  Main.cpp  Master.cpp  shadowcore.rc
src/shadowrealm/: Shadow.rc
